# TeleTall

./: .gitignore  CMakeLists.txt  LICENSE  README.md  teletall.rc
.oldtestcode/: 01.SDL.SDLimage_tests.cpp  02.SDL.mouse-key-events.cpp  03.SDL.drawLine.cpp  04.jt_SDL_draw_line_app.cpp  05.jt_SDL_Draw_NURBs.cpp  06.SDL_Cursor_old.c  07.textinput_example.cpp
.oldtestcode/Cluster.01.TSpline.Draw/: CMakeLists.txt
.oldtestcode/Cluster.01.TSpline.Draw/source/: curve.cpp  main.cpp
cmake/: FindSDL2_ttf.cmake
header/: class.h
mingw_std_threads/: mingw.condition_variable.h  mingw.future.h  mingw.mutex.h  mingw.shared_mutex.h  mingw.thread.h
source/: JUTA_math.h  curve.h  main.cpp  tallwindow.cpp  tallwindow.h  telepad.cpp  telepad.h  teletall.cpp  teletall.h  teletall_console.cpp  teletall_console.h  teletall_control.cpp  teletall_control.h  teletall_cursor.h  threadheaders.h  x_sdl2headers.h  x_threadheaders.h
source/JUTA/: JUTA_geometry_core.cpp  JUTA_geometry_core.h  JUTA_math.h
source/node/: telenode.cpp  telenode.h
source/ui/: teletall_button.cpp  teletall_button.h  teletall_graphics.cpp  teletall_graphics.h  teletall_menu.cpp  teletall_menu.h
